# ai-dungeon-master

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
campaigns/: debug_characters.json  debug_test.json  default_characters.json  generated_characters.json  shattered_crown.json  test_characters.json  the_valley_of_echoing_stones.json
campaigns/shattered_crown/: campaign.yaml
ideas/: combat_positioning.md
scripts/: README.md  fetch_srd_data.py  generate_campaign.py  generate_character.py  migrate_campaign.py
scripts/debug_agent/: harness.py  player_ai.py  report.py  run.py  scenarios.py
src/api/: __init__.py  __main__.py  app.py  events.py  game_server.py  schemas.py
src/campaign/: campaign_db.py  loader.py
src/data/: srd_client.py
src/dm/: context.py  dungeon_master.py  npc_dialogue.py  prompts.py  tools.py
src/engine/: combat.py  dice.py  economy.py  game_state.py  journal_manager.py  progression.py  rest.py  rules.py  spells.py  time_tracking.py
src/interface/: character_creation.py  cli.py  commands.py  session.py
src/log/: event_log.py
src/models/: character.py  (+5 more)
tests/: conftest.py  test_campaign_generator.py  test_campaign_loader.py  test_class_mechanics.py  test_combat.py  test_commands.py  test_context.py  test_dice.py  test_equipment.py  test_journal.py  test_npc_dialogue.py  test_observability.py  test_playtesting.py  test_progression.py  test_rules.py  test_spells.py  test_srd_client.py  test_tier2_remaining.py
ui/: chat.md  index.html  package-lock.json  package.json  vite.config.ts
(+62 files in other folders)
