[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dungeon-weaver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
fetch = [
    "httpx>=0.27",
]
gemini = ["google-genai>=1.0"]
ollama = ["openai>=1.0"]
deepseek = ["openai>=1.0"]
all-backends = ["google-genai>=1.0", "openai>=1.0"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "websockets>=14.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
